<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/btnTextColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rightID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/rightBra"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/eightID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/eghitNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/backID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/backSign"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/acID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/AC"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/nineID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/nineNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/sevenID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sevenNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/fourID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/fourNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/fiveID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/fiveNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/divisonID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/divisonSign"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/sixID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sixNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/multID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/multiSign"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/threeID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/threeNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/subID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/subSign"
        android:textColor="@color/btnTextColor"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/addID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/addSign"
        android:textColor="@color/btnTextColor"
        android:textColorHint="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/twoID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/twoNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/oneID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/oneNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/leftID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/leftBra"
        android:textColor="#EF6C00"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/equalID"
        android:layout_width="139dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/btnTextColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/equalSign"
        android:textColor="@color/btnColor"
        android:textColorHint="@color/btnColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/zeroID"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/zeroNumber"
        android:textColor="@color/colorTextNum"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/rslt1ID"
        android:layout_width="367dp"
        android:layout_height="89dp"
        android:layout_marginTop="164dp"
        android:textColor="@color/colorTextNum"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finalrsltID"
        android:layout_width="365dp"
        android:layout_height="107dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="start|end"
        android:textAlignment="textStart"
        android:textColor="@color/btnTextColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

</androidx.constraintlayout.widget.ConstraintLayout>